--- a/config/database.yml
+++ b/config/database.yml
@@ -1,25 +1,23 @@
-# SQLite version 3.x
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
-development:
-  adapter: sqlite3
-  database: db/development.sqlite3
+common: &common
+  adapter: mysql2
+  encoding: utf8
+  reconnect: true
   pool: 5
-  timeout: 5000
+  username: root
+  password:
+  host: '127.0.0.1'
 
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
+development:
+  <<: *common
+  database: expenses_development
+
 test:
-  adapter: sqlite3
-  database: db/test.sqlite3
-  pool: 5
-  timeout: 5000
+  <<: *common
+  database: expenses_test
 
 production:
-  adapter: sqlite3
-  database: db/production.sqlite3
+  database: expenses_production
+  adapter: postgresql
+  encoding: unicode
   pool: 5
-  timeout: 5000
+  password:
