--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,5 @@ rvm:
   - 2.2.0
 bundler_args: --without osx
 script:
-  - "bin/rspec"
-  - "bin/rake jasmine:ci"
+  - "bundle exec rspec"
+  - "bundle exec rake jasmine:ci"
