--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ rvm:
 bundler_args: --without osx
 before_script:
   - bin/rake db:setup --trace
+  - bin/rake db:test:prepare --trace
 script:
   - bin/rspec
   - bin/rake jasmine:ci
